# paddleocr

./: .gitignore  Cargo.toml  README.adoc  README.md
src/: lib.rs  main.rs
